fixed button jumping

--- a/static/stylesheets/components/generalStyles.css
+++ b/static/stylesheets/components/generalStyles.css
@@ -173,7 +173,7 @@ button, .btn {
     color: var(--mainPamps);
     padding: 0.4rem;
     margin: 0.15rem;
-    /*margin-bottom: 1.2rem;*/
+    margin-bottom: 1.7rem;
     padding-inline: 2.5rem;
 }
 
